Fixed the whitespace on the image on place.html

--- a/styles/place.css
+++ b/styles/place.css
@@ -63,6 +63,7 @@ footer {
     max-height: 700px;
     border-bottom: .5rem solid var(--secondary-color);
     object-fit: cover;
+    display: block;
 }
 
 .label {
